borsh/tests/roundtrip/snapshots/tests__roundtrip__test_primitives__isize_max.snap
---
source: borsh/tests/roundtrip/test_primitives.rs
expression: buf
---
[
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    127,
]
