borsh/tests/roundtrip/snapshots/tests__roundtrip__test_primitives__isize_min.snap
---
source: borsh/tests/roundtrip/test_primitives.rs
expression: buf
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    128,
]
