borsh/tests/roundtrip/snapshots/tests__roundtrip__test_primitives__isize_neg.snap
---
source: borsh/tests/roundtrip/test_primitives.rs
expression: buf
---
[
    156,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
]
