borsh/tests/roundtrip/snapshots/tests__roundtrip__test_primitives__usize_min.snap
---
source: borsh/tests/roundtrip/test_primitives.rs
expression: buf
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
